--- a/about-game.html
+++ b/about-game.html
@@ -53,7 +53,7 @@
                                 <li><a class="dropdown-item" href="sign-in.html">Sign in</a></li>
                                 <li><a class="dropdown-item" href="stadistics-personal.html">Personal statistics</a></li>
                                 <li><a class="dropdown-item" href="edit-profile.html">Edit profile</a></li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
+                                <li><a class="dropdown-item" href="index.html">Sign out</a></li>
                             </ul>
                         </li>
                     </ul>
